# PatchFinder

./: .gitignore  CONFIDENCE.md  README.md  document_processor.py  pyproject.toml
examples/: mlx_example.py
patchfinder/: __init__.py  cli.py  confidence.py  core.py  patch_generator.py
patchfinder/backends/: __init__.py  mlx.py  transformers.py  vllm.py
tests/: test_confidence.py  test_core.py  test_lisibility.py  test_patch_generator.py  test_patchfinder.py
